# TradeIQ

./: .gitignore  CLAUDE.md  DEPLOY.md  FIRESTORE_RULES.md  HANDOFF.md  ORCHESTRATOR.md  README.md  SPEC.md  firestore.indexes.json  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
app/: index.html  package.json  tsconfig.json
briefs/: hotfix-scheduled-function-deployment-brief.md  phase-0-brief.md  phase-0-reconciliation-brief.md  phase-0a-2-brief.md  phase-0a-2-pr-description.md  phase-1-brief.md  phase-1-merge-brief.md  phase-1-pr-description.md  phase-2-brief.md  phase-2-pickup-notes.md  phase-2-pr-description.md  phase-3-brief.md  phase-3-followup-etf-sourced-universe-brief.md  phase-3-followup-russell2k-only-brief.md  phase-3-followup-universe-backfill-brief.md  phase-3-pr-description.md  phase-4a-brief.md  phase-4a-hotfix-2-bar-fields-brief.md  phase-4a-hotfix-brief.md  phase-4a-pr-description.md  phase-4a-smoke-test-brief.md  phase-4b-2-brief.md  phase-4b-2-pr-description.md  phase-4b-brief.md  phase-4b-pr-description.md  phase-4c-1-brief.md  phase-4c-1-pr-description.md  phase-4c-2-brief.md  phase-4c-2-pr-description.md  phase-4e-1-brief.md  phase-4e-1-pr-description.md  phase-4f-brief.md  (+37 more)
scripts/ml/: README.md  cv.py  export_training_data.py  features.py  interpretability.py  metrics.py  models.py  pyproject.toml  regime_analysis.py  run_all.py  targets.py
scripts/ml/tests/: conftest.py  test_cv.py  test_features.py  test_metrics.py  test_models.py  test_run_all.py  test_targets.py
(+780 files in other folders)
